# pj-official-plugins

./: .gitignore  CLAUDE.md  CMakeLists.txt  PORTING_PLAN.md  README.md  conanfile.txt  porting_guide.md  porting_system_prompt.md
.github/workflows/: build-release.yml  build.yml  ci-linux.yml  ci-macos.yml  ci-windows.yml
cmake/: EmbedManifest.cmake  EmbedUi.cmake
data_load_csv/: CMakeLists.txt  README.md  csv_dialog.cpp  csv_dialog.hpp  csv_parser.cpp  csv_parser.hpp  csv_source.cpp  dataload_csv.ui  datetimehelp.ui  manifest.json  timestamp_parsing.cpp  timestamp_parsing.hpp
data_load_csv/src/: csv_dialog.hpp  csv_source.cpp  timestamp_parsing.cpp
data_load_csv/test_data/: test_duplicate_columns.csv  test_non_monotonic.csv  test_wrong_column_count.csv
data_load_csv/tests/: csv_parser_test.cpp
data_load_mcap/: CMakeLists.txt  README.md  dialog_mcap.ui  dialog_mcap_error.ui  manifest.json  mcap_dialog.hpp  mcap_helpers.hpp  mcap_source.cpp
data_load_mcap/src/: mcap_dialog.hpp  mcap_source.cpp
data_load_mcap/test_data/: generate_verification_mcaps.py  test_bad_schema.mcap  test_embedded_timestamp.mcap  test_empty_channel.mcap  test_large_arrays.mcap  test_large_file.mcap  test_publish_vs_log_time.mcap  test_unsupported_encoding.mcap
data_load_mcap/tests/: mcap_helpers_test.cpp
data_load_parquet/: CMakeLists.txt  README.md  dataload_parquet.ui  manifest.json  parquet_dialog.hpp  parquet_helpers.hpp  parquet_source.cpp
data_load_parquet/src/: parquet_source.cpp
data_load_parquet/test_data/: test_tz.parquet
data_load_parquet/tests/: parquet_helpers_test.cpp
data_load_ulog/: CMakeLists.txt  README.md  manifest.json  ulog_params.ui  ulog_params_dialog.cpp  ulog_params_dialog.hpp  ulog_source.cpp
data_load_ulog/src/: ulog_source.cpp
data_load_ulog/tests/: ulog_source_test.cpp
data_stream_dummy/: CMakeLists.txt  dummy_stream.cpp  manifest.json
data_stream_foxglove_bridge/: CMakeLists.txt  README.md  foxglove_dialog.hpp  foxglove_protocol.hpp  foxglove_source.cpp  manifest.json
data_stream_foxglove_bridge/src/: foxglove_dialog.hpp  foxglove_source.cpp
data_stream_foxglove_bridge/test_scripts/: foxglove_test_server.py  foxglove_test_server_simple.py
data_stream_foxglove_bridge/tests/: foxglove_protocol_test.cpp
data_stream_foxglove_bridge/ui/: foxglove_client.ui
data_stream_mqtt/: CMakeLists.txt  README.md  datastream_mqtt.ui  manifest.json  mqtt_dialog.hpp  mqtt_source.cpp
data_stream_mqtt/src/: mqtt_dialog.hpp  mqtt_source.cpp
data_stream_mqtt/test_scripts/: mqtt_publisher.py  mqtt_test_json.py  test_message_pb2.py
data_stream_pj_bridge/: CMakeLists.txt  README.md  manifest.json  pj_bridge_dialog.hpp  pj_bridge_source.cpp
data_stream_pj_bridge/src/: pj_bridge_dialog.hpp  pj_bridge_protocol.cpp  pj_bridge_protocol.hpp  pj_bridge_source.cpp
data_stream_pj_bridge/test_scripts/: pj_bridge_test_server.py
data_stream_pj_bridge/tests/: pj_bridge_protocol_test.cpp
data_stream_pj_bridge/ui/: websocket_client.ui
data_stream_zmq/: CMakeLists.txt  README.md  datastream_zmq.ui  manifest.json  zmq_dialog.hpp  zmq_source.cpp
data_stream_zmq/src/: zmq_source.cpp
data_stream_zmq/test_scripts/: test_message.proto  zmq_publisher.py
parser_data_tamer/: CMakeLists.txt  README.md  data_tamer_parser.cpp  manifest.json
parser_data_tamer/src/: data_tamer_parser.cpp
parser_data_tamer/tests/: data_tamer_parser_test.cpp
parser_json/: CMakeLists.txt  README.md  json_parser.cpp  json_parser_dialog.hpp  json_parser_options.ui  manifest.json
parser_json/src/: json_parser.cpp
parser_json/tests/: json_parser_test.cpp
parser_protobuf/: CMakeLists.txt  README.md  manifest.json  protobuf_parser.cpp  protobuf_parser_dialog.hpp  protobuf_parser_options.ui
parser_protobuf/src/: protobuf_parser.cpp
parser_protobuf/tests/: protobuf_parser_test.cpp
parser_ros/: CMakeLists.txt  README.md  manifest.json  ros_parser.cpp  ros_parser_internal.hpp  ros_specializations.cpp
parser_ros/benchmarks/: ros_parser_bench.cpp
parser_ros/src/: ros_parser.cpp
parser_ros/tests/: ros_parser_test.cpp
scripts/: README.md  package_plugin.py  pj_validation.py  release_extension.py  release_plugin.py  release_tools.py  submit_to_registry.py  verify_release.py
